--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
-  "name": "vscode-restore",
-  "packageManager": "yarn@4.0.1"
+  "name": "vscode-restore-from-history",
+  "packageManager": "yarn@4.0.1",
+  "type": "module",
+  "entry": "index.js",
+  "devDependencies": {
+    "prettier": "^3.1.0"
+  },
+  "dependencies": {
+    "yargs": "^17.7.2"
+  }
 }
